fixed spacing, again;

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@
     background-color: #ffffff;
     margin: -10px;
     padding: 20px;
-    font-size: 30px;
     border-radius: 10px;
   }
   
@@ -17,20 +16,21 @@
   }
   
   .item-name {
-    font-size: 25px;
+    font-size: 18px;
     font-weight: 200;
-    margin-top: 0px;
-    margin-bottom: 0px;
+    margin-top: 9px;
+    margin-bottom: 5px;
     color: #313131;
     margin-left: 10px;
   }
   
   .item-tag {
     font-size: 12px;
-    font-weight: bold;
+    font-weight: bolder;
     color: #919191;
     margin-left: 10px;
     margin-top: 0px;
+    margin-bottom: 0px;
   }
   
   .item-image {
